--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,45 @@
+Version 1.15.0  (08 February 2016)
+
+ -  The OLFS regression test harness has been migrated from DejaGnu to AutoTest. This makes writing and maintaining
+    tests much easier. All of the DejaGnu tests have been migrated and many additional tests added. To configure the
+    tests:
+        autoconf -vif
+        ./configure
+    To run the tests:
+        make check
+
+ -  Error handling has been refactored. Error messages from libdap and the BES are now correctly transmitted to the
+    user. Additionally the HTTP status codes and associated pages are now working correctly and there should be a
+    significant reduction in the number of "superman" (Internal Error) pages encountered in normal operation.
+
+ -  The default size of the BES client pool has been increased from 10 to 200 in response to numerous performance
+    evaluators that failed to recognize that this could be done to increase performance in high traffic environments.
+
+ -  The OLFS now keeps the BES on a timeout leash so that BES requests that take longer than the time out interval
+    stated in the olfs.xml will actually timeout and return an associated error to the OLFS.
+
+ -  !!!!! The location of the OLFS configuration directory has changed !!!!
+    This change should resolve installation problems with Tomcat instances that are installed from RPM.
+    By default the OLFS will utilize it's bundled configuration in the directory
+      $CATALINA_HOME/webapps/opendap/WEB-INF/conf
+    In order to localize the configuration so that your configuration changes are persistent you will need to do
+    one of the following:
+      * For the user that will be running the OLFS (the Tomcat user), set the environment variable OLFS_CONFIG_DIR to
+        an existing directory to which the Tomcat user has both read and write privileges.
+      OR
+      * Create the directory /etc/olfs and set it's permissions/ownership so that the Tomcat user has both read and
+        write permission.
+    (If both of these steps are done then priority is given to the environment variable.)
+    Restart Tomcat. When it starts the OLFS will check these locations and then install a copy of its default
+    configuration into the new spot.
+    Edit the configuration files as needed.
+    If, for example, your beslistener is not running on localhost:10022 then you'll need to edit the olfs.xml
+    file in the configuration directory and adjust the <host> and <port>  values to reflect your situation.
+
+
 Version 1.14.1 (28 October 2015)
 
-  Worked uner the hood to ensure tat Hyrax's character encoding is actually UTF-8.
+  Worked under the hood to ensure that Hyrax's character encoding is actually UTF-8.
 
 Version 1.14.0 (21 September 2015)
 
