--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 
 ########################## Hyrax/OLFS ##########################
 
-Hyrax Version 1.12.2  (28 October 2015)
-OLFS  Version 1.14.1  (21 October 2015)
+Hyrax Version 1.13.0  (08 February 2016)
+OLFS  Version 1.15.0  (08 February 2016)
 
 The file install.html or docs/index.html may have additional information...
 
@@ -34,14 +34,35 @@ Launch it:
 
 Configure it:
 
-    vi $CATALINA_HOME/content/opendap/olfs.xml
-    (If your beslistener is not running on localhost:10022 then be sure to adjust the <host> and <port>
-    values to reflect your situation)
+    By default the OLFS will utilize it's bundled default configuration in the directory
+    $CATALINA_HOME/webapps/opendap/WEB-INF/conf
+
+    In order to localize your configuration so that your configuration changes are persistent you will need to do
+    one of the following:
+
+    * For the user that will be running the OLFS (the Tomcat user), set the environment variable OLFS_CONFIG_DIR to
+    an existing directory to which the  Tomcat user has both read and write privileges.
+
+    OR
+
+    * Create the directory /etc/olfs and set it's permissions/ownership so that the Tomcat user has both read and
+    write permission.
+
+    If both of these steps are done then priority is given to the environment variable.
+
+    Restart Tomcat. When it starts the OLFS will check these locations and then install a copy of its default
+    configuration into the new spot.
+
+    Edit the configuration files as needed.
+
+    If, for example, your beslistener is not running on localhost:10022 then you'll need to edit the olfs.xml
+    file in the configuration directory and adjust the <host> and <port>  values to reflect your situation.
 
 Relaunch it:
 
     $CATALINA_HOME/bin/shutdown.sh; $CATALINA_HOME/bin/startup.sh
 
+    For the configuration changes to take effect.
 
 See http://docs.opendap.org/index.php/Hyrax for information about this software, Installation
 instructions and NEWS.
